--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="My BucketList test" />
+    <meta property="og:description" content="this only a test" />
+    <meta property="og:image" content="{{ url_for('static', filename='bucketlist.png') }}" />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
